--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calendar</title>
     <!--<link rel="stylesheet" href="css/styles.css">-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/calendar.css">
     <link rel="stylesheet" href="css/controls.css">
 </head>
