--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
 <body>
     <div id="app"></div>
+    <!--<div class="ui active transition visible dimmer">
+        <div class="content">
+            <div class="center">
+                <div class="ui small text loader">Loading</div>
+            </div>
+        </div>
+    </div>-->
+    
     <script src="react.bundle.js"></script>
 </body>
 
